# lidar_project

./: CMakeLists.txt  README.md  package.xml  test.txt
Log/: back_end_node.INFO  back_end_node.captain.jerry.log.INFO.20210909-144314.19262  back_end_node.captain.jerry.log.INFO.20210909-144802.20284  back_end_node.captain.jerry.log.INFO.20210909-145220.20679  back_end_node.captain.jerry.log.INFO.20210909-145435.21524  back_end_node.captain.jerry.log.INFO.20210909-150211.22724  back_end_node.captain.jerry.log.INFO.20210909-153504.26335  back_end_node.captain.jerry.log.INFO.20210909-155756.28721  back_end_node.captain.jerry.log.INFO.20210909-155911.29527  back_end_node.captain.jerry.log.INFO.20210909-160108.2470  back_end_node.captain.jerry.log.INFO.20210909-160830.4287  back_end_node.captain.jerry.log.INFO.20210909-161542.5508  back_end_node.captain.jerry.log.INFO.20210909-164545.9005  back_end_node.captain.jerry.log.INFO.20210909-171418.13540  back_end_node.captain.jerry.log.INFO.20210909-171607.14209  back_end_node.captain.jerry.log.INFO.20210909-180219.21959  back_end_node.captain.jerry.log.INFO.20210909-180458.22713  back_end_node.captain.jerry.log.INFO.20210909-180538.22809  back_end_node.captain.jerry.log.INFO.20210909-180640.22906  back_end_node.captain.jerry.log.INFO.20210909-185025.26551  back_end_node.captain.jerry.log.INFO.20210909-185056.26687  back_end_node.captain.jerry.log.INFO.20210909-185448.29097  back_end_node.captain.jerry.log.INFO.20210909-215832.4680  back_end_node.captain.jerry.log.INFO.20210910-001722.19272  back_end_node.captain.jerry.log.INFO.20210910-100005.10567  back_end_node.captain.jerry.log.INFO.20210910-100241.10931  back_end_node.captain.jerry.log.INFO.20210910-114615.3414  back_end_node.captain.jerry.log.INFO.20210910-133554.10181  back_end_node.captain.jerry.log.INFO.20210910-170157.4137  back_end_node.captain.jerry.log.INFO.20210910-170823.5782  back_end_node.captain.jerry.log.INFO.20210910-175809.17034  back_end_node.jingwan.jingwan.log.INFO.20210924-105136.8396  back_end_node.jingwan.jingwan.log.INFO.20211008-143443.5875  back_end_node.jingwan.jingwan.log.INFO.20211008-144213.8114  back_end_node.jingwan.jingwan.log.INFO.20211008-144746.10177  back_end_node.jingwan.jingwan.log.INFO.20211008-150818.19799  back_end_node.jingwan.jingwan.log.INFO.20211009-082727.28098  back_end_node.jingwan.jingwan.log.INFO.20211009-094106.9992  back_end_node.jingwan.jingwan.log.INFO.20211009-172356.16326  back_end_node.jingwan.jingwan.log.INFO.20211009-172708.18348  (+318 more)
app/: back_end_node.cpp  data_pretreat_node.cpp  front_end_node.cpp  front_test.cpp  loop_closing_node.cpp  matching_node.cpp  test_frame.cpp  viewer_node.cpp
back/: data_publisher.cpp  data_publisher.hpp  data_subscriber.cpp  data_subscriber.hpp  front_end_back.c  front_end_back.hpp  kitti_data.c  kitti_data.hpp
back/include/: tf_listener.hpp
back/include/front_end/: front_end.hpp  front_end_flow.hpp
back/include/kitti_data/: cloud_data.hpp  gnss_data.hpp
back/include/publisher/: cloud_publisher.hpp  odometry_publisher.hpp
back/include/subscriber/: imu_subscriber.hpp
back/sensor_data/: gnss_data.cpp  imu_data.cpp  velocity_data.cpp
back/src/: tf_listener.cpp
back/src/front_end/: front_end.cpp  front_end_flow.cpp
back/src/kitti_data/: gnss_data.cpp
back/src/publisher/: cloud_publisher.cpp  odometry_publisher.cpp
back/src/subscriber/: cloud_subscriber.cpp  gnss_subscriber.cpp  imu_subscriber.cpp  velocity_subscriber.cpp
config/: BackEndConfig.yaml  FrontEndConfig.yaml  LoopClosingConfig.yaml  Matching.yaml  viewer_config.yaml
include/: tf_listener.hpp
include/data_pretreatment/: data_pretreat_flow.hpp
include/general_models/cloud_filter/: box_filter.hpp  filter_interface.hpp  no_filter.hpp  voxel_filter.hpp
include/general_models/file_manager/: file_manager.hpp
include/general_models/graph_optimizer/: g2o_graph_optimizer.hpp  interface_graph_optimizer.hpp
include/general_models/registration/: ndt_registration.hpp  registration_infterface.hpp
include/general_models/tools/: global_path.h  global_path.h.in  print_info.hpp  tic_toc.hpp
include/general_models/undistorted/: undistorted.hpp
include/kitti_data/: cloud_data.hpp  gnss_data.hpp  imu_data.hpp  key_frame.hpp  loop_pose.hpp  pose_data.hpp  velocity_data.hpp
include/mapping/back_end/: back_end.hpp  back_end_flow.hpp
include/mapping/front_end/: front_end.hpp  front_end_flow.hpp
include/mapping/loop_closing/: loop_closing.hpp  loop_closing_flow.hpp
include/mapping/viewer/: viewer.hpp  viewer_flow.hpp
include/matching/: matching.hpp  matching_flow.hpp
include/publisher/: cloud_publisher.hpp  imu_publisher.hpp  key_frame_publisher.hpp  key_frames_publisher.hpp  loop_pose_publisher.hpp  odometry_publisher.hpp  tf_broadcaster.hpp
include/subscriber/: cloud_subscriber.hpp  gnss_subscriber.hpp  imu_subscriber.hpp  key_frame_subscriber.hpp  key_frames_subscriber.hpp  loop_pose_subscriber.hpp  odometry_subscriber.hpp  velocity_subscriber.hpp
launch/: front_test.launch  mapping.launch  mapping.rviz  mapping_with_aloam.launch  matching.launch  test_frame.launch  test_frame.rviz
slam_data/key_frames/: key_frame_0.pcd  key_frame_1.pcd  key_frame_2.pcd  key_frame_3.pcd  key_frame_4.pcd
slam_data/trajectory/: ground_truth.txt  laser_odom.txt  optimized.txt
src/: tf_listener.cpp
src/data_pretreatment/: data_pretreat_flow.cpp
src/general_models/cloud_filter/: box_filter.cpp  no_filter.cpp  voxel_filter.cpp
src/general_models/file_manager/: file_manager.cpp
src/kitti_data/: LoopPose.cpp  gnss_data.cpp  imu_data.cpp  key_frame.cpp  pose_data.cpp  velocity_data.cpp
src/matching/: matching.cpp  matching_flow.cpp
src/publisher/: cloud_publisher.cpp  key_frame_publisher.cpp  key_frames_publisher.cpp  loop_pose_publisher.cpp  odometry_publisher.cpp  tf_broadcaster.cpp
src/subscriber/: cloud_subscriber.cpp  gnss_subscriber.cpp  imu_subscriber.cpp  key_frame_subscriber.cpp  key_frames_subscriber.cpp  loop_pose_subscriber.cpp  odomerty_subscriber.cpp  velocity_subscriber.cpp
srv/: optimizeMap.srv
(+22 files in other folders)
