<?xml version="1.0"?>
<package format="2">
  <name>lidar_project</name>
  <version>0.0.0</version>
  <description>A project of lidar reconstruction</description>
  <license>TO DO</license>
  <maintainer email="jerryisok@jingwan.jingwan">Capta1nY</maintainer>
  
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>eigen_conversions</depend>
  
  
  <depend>libgoogle-glog-dev</depend>


  <export>
  
  </export>
</package>
